добавлены исключения ненахода убраны лишние комментарии